Extract `AlgorithmRegistry` interface
- Rename existing class to DefaultAlgorithmRegistry.
- Create AlgorithmRegistry interface for better testability.
- Refactor test classes to accommodate the changes.
- Improve test quality overall.