@@ -2,57 +2,57 @@ package org.zafer.wflopalgorithms.algorithms.wdga.strategy;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-
-import com.fasterxml.jackson.core.type.TypeReference;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import org.zafer.wflopalgorithms.common.ga.solution.Individual;
-import org.zafer.wflopconfig.ConfigLoader;
 import org.zafer.wflopcore.power.PowerCalculator;
 import org.zafer.wflopmodel.problem.WFLOP;
+import org.zafer.wflopmodel.wind.WindProfile;
+
+import java.util.List;
+import java.util.Set;
 
 class WakeBasedMutationTest {
 
-    private WFLOP wflop;
-    private PowerCalculator powerCalculator;
-    private WakeBasedMutationStrategy wakeBasedMutationStrategy;
+    @Test
+    void producesValidMutant_WhenMutated() {
+        // Given
+        int dimension = 3;
+        int turbineCount = 2;
 
-    @BeforeEach
-    void setUp() {
-        wflop = ConfigLoader.load(
-            "configs/test_problem_small.json",
-            new TypeReference<WFLOP>() {}
+        WFLOP problem = new WFLOP(
+            40.0,
+            100.0,
+            0.9,
+            0.8,
+            1.225,
+            0.1,
+            200.0,
+            dimension,
+            turbineCount,
+            List.of(
+                new WindProfile(5.8, 180, 1.0)
+            )
         );
-        powerCalculator = new PowerCalculator(wflop);
-        wakeBasedMutationStrategy = new WakeBasedMutationStrategy(
+        PowerCalculator calculator = new PowerCalculator(problem);
+        WakeBasedMutationStrategy strategy = new WakeBasedMutationStrategy(
             0.5,
             1.0,
-            powerCalculator);
+            calculator
+        );
 
-        if (wflop == null) {
-            System.out.println("WFLOP is null!");
-        }
-        if (powerCalculator == null) {
-            System.out.println("PowerCalculator is null!");
-        }
-        if (wakeBasedMutationStrategy == null) {
-            System.out.println("WakeBasedMutationStrategy is null!");
-        }
-    }
-
-    @Test
-    void testWakeBasedMutationStrategyWithSmallProblemInstance() {
-        // Given
-        Individual originalIndividual = new Individual(new ArrayList<>(Arrays.asList(1, 4)));
+        Individual originalIndividual = new Individual(List.of(1, 4));
+        List<Integer> expectedGenes = List.of(0, 1);
 
         // When
-        Individual mutatedIndividual = wakeBasedMutationStrategy.mutate(originalIndividual, wflop);
+        Individual mutatedIndividual = strategy.mutate(originalIndividual, problem);
+        List<Integer> actualGenes = mutatedIndividual.getGenes();
 
 	    // Then
-        assertEquals(new HashSet(Arrays.asList(0, 1)), new HashSet(mutatedIndividual.getGenes()));
+        assertEquals(turbineCount, actualGenes.size(), "Turbine count should not change after mutation");
+        assertEquals(turbineCount, Set.copyOf(actualGenes).size(), "Should not contain duplicates");
+        assertTrue(
+            actualGenes.contains(expectedGenes.get(0)) && actualGenes.contains(expectedGenes.get(1))
+        );
     }
 }
